--- a/public/css/ap.css
+++ b/public/css/ap.css
@@ -1,36 +1,16 @@
-div.items {
-    height: 50px;
-    line-height: 40px;
-    clear: right;
-    width: 100%;
+.header {
+    margin-top: 20px;
+    margin-left: 40px;
 }
-div.items>img {
+.header img {
     float: left;
-    margin-right: 5px;
+    margin-right: 20px;
 }
-div.items>span {
-    color: red;
+.header h3 {
+    color: #969594;
 }
-div.items>input[type=text] {
-    height: 20px;
-    width: 30px;
-    float: right;
-    margin-right: 30px;
-    text-align: right;
-}
-#now-ap {
-    height:20px;
-    width: 100px;
-    text-align:right;
-    margin-left:20px;
-}
-#end {
-    font-size: 2em;
-}
-.end {
-    display: block;
-    height: 2.6em;
-    line-height: 2.6em;
-    float: left;
-    margin-right: 1em;
+
+.content-items {
+    border-left: 15px solid #edeef0;
+    padding-left:  15px;
 }
