--- a/css/armor.css
+++ b/css/armor.css
@@ -48,3 +48,16 @@
 .item-line-1-block.r .parend {
     margin-left: 40px;
 }
+
+.post {
+    line-height: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+.post img {
+    float: left;
+    margin-right: 10px;
+}
+
+#posts  { height:300px; overflow-y: auto; }
