--- a/css/armor.css
+++ b/css/armor.css
@@ -11,24 +11,26 @@
 }
 
 .item {
-    width: 60px;
+    width: 40px;
     float: left;
-    height: 60px;
-    border: 1px solid black;
-    border-radius: 3px;
+    height: 40px;
+    border: 1px solid #222222;
+    border-radius: 5px;
+    cursor: pointer;
 }
 .item.selectedItem {
-    border-width: 2px;
+    box-shadow: 0 0 5px 1px #0099ff;
 }
+
 
 .item-line-1-block {
     float: left;
-    width: 102px;
+    width: 82px;
 }
 
 .item-line-1-block.c {
     margin-left: 20px;
-    margin-right: 30px;
+    margin-right: 20px;
     width: 50px;
 }
 
@@ -36,31 +38,39 @@
     display: block;
     clear: left;
     float: left;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
     text-align: center;
 }
 
 .item-line-1-block .child {
-    margin-top: -20px;
+    margin-top: -15px;
 }
 
 .item-line-1-block.r>a{
     clear: none;
 }
 .item-line-1-block.r .parend {
-    margin-left: 40px;
+    margin-left: 25px;
 }
 
 .post {
     line-height: 40px;
     height: 40px;
     cursor: pointer;
-    margin-bottom: 10px;
+    color: #fff;
+    background: #222222;
+    border-bottom: 1px solid #205791;
 }
 .post img {
     float: left;
     margin-right: 10px;
 }
+.post.q1 {color: #adadad}
+.post.q2 {color: #f1f1f1}
+.post.q3 {color: #69e15e}
+.post.q4 {color: #4ccfff}
+.post.q5 {color: #ffc103}
+.post.q6 {color: #ff8033}
 
-#posts  { height:300px; overflow-y: auto; }
+#posts  { height:450px; overflow-y: auto; }
