--- a/css/armor.css
+++ b/css/armor.css
@@ -74,3 +74,51 @@
 .post.q6 {color: #ff8033}
 
 #posts  { height:450px; overflow-y: auto; }
+
+#modal {
+    position: absolute;
+    padding: 35px 40px;
+
+    background-color: #FFFFFF;
+    border-color: #ACACAC #ACACAC #999999;
+    border-style: solid;
+    border-width: 1px;
+
+    /* Chrome */
+    -webkit-box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
+    box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
+
+    /* FireFox */
+    -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+
+    /* Opera */
+    box-shadow: 0px 4px 16px;
+
+    /* IE */
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
+
+    outline: 0 none;
+    z-index: 1101;
+}
+
+#sp {
+    opacity: 0.75;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    color: #fff;
+    background: #fff;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+}
+
+#add-items {
+    position: absolute;
+    left: 0px;
+    z-index: 1;
+}
+.content {
+    position: relative;
+    z-index: 10;
+}
