--- a/css/armor.css
+++ b/css/armor.css
@@ -73,8 +73,6 @@
 .post.q5 {color: #ffc103}
 .post.q6 {color: #ff8033}
 
-#posts  { height:450px; overflow-y: auto; }
-
 .modal {
     position: absolute;
     padding: 35px 40px;
@@ -115,9 +113,36 @@
 
 #add-items {
     position: absolute;
-    left: 0px;
+    left: -150px;
+    margin-top: 35px;
     z-index: 1;
+
+    padding: 20px 30px;
+
+    background-color: #FFFFFF;
+    border-color: #ACACAC #ACACAC #999999;
+    border-style: solid;
+    border-width: 1px;
+
+    /* Chrome */
+    -webkit-box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
+    box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
+
+    /* FireFox */
+    -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+
+    /* Opera */
+    box-shadow: 0px 4px 16px;
+
+    /* IE */
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
 }
+#add-items.active {
+    left: 380px;
+}
+
+#posts  { height:400px; overflow-y: auto; }
+
 .content {
     position: relative;
     z-index: 10;
