--- a/css/armor.css
+++ b/css/armor.css
@@ -277,3 +277,7 @@ button.close {
     background: -moz-linear-gradient(center top , #F3F3F3, #F5F5F5) repeat scroll 0 0 transparent;
     border-color: #444444;
 }
+
+#item-1 {
+    background: url(/images/data/man/Aion_icon_1.jpg) left top no-repeat;
+}
