--- a/css/armor.css
+++ b/css/armor.css
@@ -10,69 +10,16 @@
     color: #969594;
 }
 
-.item {
-    width: 40px;
-    float: left;
-    height: 40px;
-    border: 1px solid #222222;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    cursor: pointer;
-}
-.item.selectedItem {
-    box-shadow: 0 0 5px 1px #0099ff;
-}
+.q1 {color: #adadad !important;}
+.q2 {color: #f1f1f1 !important;}
+.q3 {color: #69e15e !important;}
+.q4 {color: #4ccfff !important;}
+.q5 {color: #ffc103 !important;}
+.q6 {color: #ff8033 !important;}
 
-
-.item-line-1-block {
-    float: left;
-    width: 82px;
+.hide {
+    display: none!important;
 }
-
-.item-line-1-block.c {
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 50px;
-}
-
-.item-line-1-block>a {
-    display: block;
-    clear: left;
-    float: left;
-    width: 25px;
-    height: 25px;
-    text-align: center;
-}
-
-.item-line-1-block .child {
-    margin-top: -15px;
-}
-
-.item-line-1-block.r>a{
-    clear: none;
-}
-.item-line-1-block.r .parend {
-    margin-left: 25px;
-}
-
-.post {
-    line-height: 40px;
-    height: 40px;
-    cursor: pointer;
-    color: #fff;
-    background: #222222;
-    border-bottom: 1px solid #205791;
-}
-.post img {
-    float: left;
-    margin-right: 10px;
-}
-.post.q1 {color: #adadad}
-.post.q2 {color: #f1f1f1}
-.post.q3 {color: #69e15e}
-.post.q4 {color: #4ccfff}
-.post.q5 {color: #ffc103}
-.post.q6 {color: #ff8033}
 
 .modal {
     position: absolute;
@@ -99,10 +46,6 @@
     outline: 0 none;
     z-index: 1102;
 }
-.modal .buttons-panel {
-    text-align: center;
-    clear: both;
-}
 
 #sp {
     opacity: 0.75;
@@ -115,138 +58,6 @@
     overflow: hidden;
     top: 0;
     left: 0;
-}
-
-#add-items {
-    position: absolute;
-    left: -150px;
-    margin-top: 35px;
-    z-index: 1;
-
-    padding: 20px 30px;
-
-    background-color: #FFFFFF;
-    border-color: #ACACAC #ACACAC #999999;
-    border-style: solid;
-    border-width: 1px;
-
-    /* Chrome */
-    -webkit-box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
-    box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
-
-    /* FireFox */
-    -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-
-    /* Opera */
-    box-shadow: 0px 4px 16px;
-
-    /* IE */
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
-}
-#add-items.active {
-    left: 380px;
-}
-#add-items .close {
-    float: right;
-}
-
-button.close {
-    float: right;
-    margin-top: -15px;
-    margin-right: -20px;
-}
-
-#add-items .close button, button.close {
-    border: none;
-    background: url(/images/closeButtons.png) left top no-repeat;
-    width: 14px;
-    height: 14px;
-    cursor: pointer;
-}
-#add-items .close button:hover, button.close:hover {
-    background-position: -28px;
-}
-
-#posts  { height:400px; overflow-y: auto; }
-
-.content {
-    position: relative;
-    z-index: 10;
-}
-
-.compare {}
-.compare .block {margin-bottom: 20px;}
-.compare .type span {float: right;}
-.compare .skill {
-    float: left;
-    width: 150px;
-}
-/* меньше */
-.compare .skill.m span {
-    color: red;
-}
-/* больше */
-.compare .skill.b span {
-    color: #adff2f;
-}
-
-.compare .stoun {
-    float: left;
-    width: 40px;
-    margin-right: 110px;
-    height: 40px;
-    border: 1px solid #000;
-    border-radius: 3px;
-    cursor: pointer;
-    margin-bottom: 5px;
-}
-.compare .stoun.q0, .magicStounItem.q0 {
-    background: url(/images/data/magic-stoun/hp-white.png) left top no-repeat;
-}
-.compare .stoun.q1, .magicStounItem.q1 {
-    background: url(/images/data/magic-stoun/hp-green.png) left top no-repeat;
-}
-.compare .stoun.selectedItem {
-    box-shadow: 0 0 5px 1px #0099ff;
-}
-.magicStounItem {
-    height: 40px;
-    line-height: 40px;
-    padding-left: 45px;
-    margin-bottom: 5px;
-    cursor: pointer;
-}
-.compare .complect-item {
-    margin-left: 20px;
-}
-.compare h3 span {
-    display: block;
-    margin-top: 5px;
-}
-.compare h3 span i {
-    width: 35px;
-    display: inline-block;
-    text-align: center;
-}
-.compare .up {
-    background: url(/images/up.png) top left no-repeat;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    border: none;
-    white-space:nowrap;
-}
-.compare .down {
-    background: url(/images/down.png) top left no-repeat;
-    width: 16px;
-    height: 16px;
-    cursor: pointer;
-    border: none;
-    white-space:nowrap;
-}
-
-#container {
-    z-index: 1;
 }
 
 .gp-button {
@@ -269,7 +80,7 @@ button.close {
     -o-transition-property: border-top-color, border-right-color, border-bottom-color, border-left-color;
     -o-transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1), cubic-bezier(0.25, 0.1, 0.25, 1), cubic-bezier(0.25, 0.1, 0.25, 1), cubic-bezier(0.25, 0.1, 0.25, 1);
     background-image: -o-linear-gradient(top, rgb(245, 245, 245) 40%, rgb(241, 241, 241) 70%);
-    
+
     color: #666;
     cursor: pointer;
     display: inline-block;
@@ -285,6 +96,8 @@ button.close {
     text-transform: uppercase;
     vertical-align: middle;
     text-decoration: none;
+    margin-top: -5px;
+    min-height: 30px;
 }
 .gp-button:hover {
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
@@ -298,37 +111,120 @@ button.close {
     border-color: #444444;
 }
 
-#item-1 {
-    background: url(/images/data/man/Aion_icon_1.jpg) left top no-repeat;
+.gp-input {
+    font-size: 14px;
+    height: 29px;
+    background-color: white;
+    margin: 0!important;
+    padding: 3px 0 3px 8px;
+    border: 1px solid #D9D9D9!important;
+    border-top: 1px solid silver!important;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border-radius: 1px;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    -o-transition: none;
+    -webkit-transition: none;
+    border: 1px solid;
+    border-collapse: collapse;
+    color: #222;
+    border-color: #666 #CCC #CCC #CCC;
+    min-height: 30px;
+}
+.gp-input:focus, .gp-input:active {
+    margin: 0!important;
+    padding: 3px 0 3px 8px;
+    -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+    -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+    box-shadow: inset 0 1px 2px rgba(0,0,0,0.3);
+    border: 1px solid #4D90FE!important;
+    -o-transition: all 0s;
+    -webkit-transition: all 0s;
+    outline: 0!important;
 }
 
-.magicStounPanel {
-    position: absolute;
-    min-height: 50px;
-    width: 300px;
-    border-color: #ACACAC #ACACAC #999;
-    border-style: solid;
-    border-width: 1px;
-    z-index: 1001;
-    top: 0px;
-    left: 0px;
+
+#man {
+    width: auto;
+    display: inline-block;
+    padding: 20px;
+    position: relative;
+    z-index: 100;
     background: #fff;
-
-    padding: 10px;
-
-    /* Chrome */
-    -webkit-box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
-    box-shadow: rgba(0, 0, 0, 0.199219) 0px 4px 16px 0px;
-
-    /* FireFox */
-    -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-
-    /* Opera */
-    box-shadow: 0px 4px 16px;
-
-    /* IE */
-    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.2);
 }
-.magicStounPanel h3 {
+#man .item {
+    border: 1px solid black;
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+    float: left;
+    cursor: pointer;
+    background: #fff;
+}
+#man .item:hover {
+    box-shadow: 0px 0px 5px #06C;
+}
+
+#man .weapon-1, #man .weapon-2 {
+    float: left;
+    width: 70px;
+    max-width: 70px;
+    outline: hidden;
+}
+#man .weapon-1 {
+    margin-right: 40px;
+}
+#man .weapon-2 {
+    margin-left: 40px;
+}
+#man .weapon-1 a, #man .weapon-2 a {
+    float: left;
+    clear: left;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
     text-align: center;
+    text-decoration: none;
 }
+#man .weapon-2 a {
+    clear: none;
+    float: none;
+}
+#man .weapon-1 div:last-child, #man .weapon-2 div:last-child {
+    margin-top: -15px;
+}
+#man .weapon-2 div:first-child {
+    margin-left: 25px;
+}
+
+#man .itemPanel, #man .itemPanel-2 {
+    float: left;
+    margin-left: 50px;
+    margin-top: 10px;
+}
+#man .itemPanel-2 {
+    margin-left: 78px;
+}
+#man .itemPanel .item, #man .itemPanel-2 .item {
+    clear: both;
+    margin-bottom: 10px;
+}
+
+#findItem {margin-top: -400px; width: 400px;}
+#findItem form {margin-bottom: 10px;}
+
+#findItem #findItem-loading {
+    display: inline-block;
+    background: url(/images/ajax-loader.gif) top left no-repeat;
+    width: 16px;
+    height: 16px;
+    margin-top: 2px;
+}
+
+#findItem #findItem-list {height: 350px; overflow-y: auto;}
+#findItem #findItem-list .post {line-height: 40px; cursor: pointer;color: #fff; background: #222222; border-bottom: 1px solid #205791;}
+#findItem #findItem-list .post img {float: left;}
+#findItem #findItem-list .post span {display: block; padding-left: 50px;}
